[package]
name = "ash-window"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.29"
raw-window-handle = "0.3"

[dev-dependencies]
winit = { git = "https://github.com/rust-windowing/winit.git", rev = "6f5e7e170cd7bd9be1bb302dd91ebd906d29cfe1" }
